--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "audit": "^0.0.6",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "express": "^4.17.1",
+    "fix": "^0.0.3",
     "mocha": "^10.2.0"
   },
   "devDependencies": {
